# shad

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  FAQ.md  README.md  SETUP.md  base.docker  mypy.ini  pyproject.toml  pyrefly.toml  requirements.txt  testenv.docker  url.py
01.1.PythonTools/tasks/hello_world/: test_public.py
01.1.Regex/tasks/fp_literal/: README.md  fp_literal.py  test_public.py
01.1.Regex/tasks/hex_literal/: README.md  hex_literal.py  test_public.py
01.1.Regex/tasks/int_literal/: README.md  int_literal.py  test_public.py
01.1.Regex/tasks/links/: README.md  links.py  test_public.py
01.1.Regex/tasks/palindrome_num/: README.md  palindrome_num.py  test_public.py
01.1.Regex/tasks/reformat_date/: README.md  reformat.py  test_public.py
01.1.Regex/tasks/str_literal/: README.md  str_literal.py  test_public.py
01.2.SubprocessThreadingMultiprocessing/lecture/: SubprocessThreadingMultiprocessing.ipynb  multiply.py  simple_append.py  sum_module.py
01.2.SubprocessThreadingMultiprocessing/tasks/git_diff/: git_diff.py
01.2.SubprocessThreadingMultiprocessing/tasks/sort_tsv/: sort_tsv.py
01.2.SubprocessThreadingMultiprocessing/tasks/very_slow_function/: very_slow_function.py
01.3.Asynchrony/lecture/: Asynchrony.ipynb
01.3.Asynchrony/tasks/async_proxy/: async_proxy.py
01.3.Asynchrony/tasks/sync_vs_async/: sync_vs_async.py
02.1.Bytecode/lecture/: ByteCode.ipynb
02.2.HW1/tasks/vm/: test_public.py  vm.py  vm_runner.py
03.1.TestingLogging/lecture/: Logging.ipynb  Testing.ipynb
03.1.TestingLogging/tasks/banner_engine/: banner_engine.py  user_tests.py
04.1.Patterns/lecture/: Patterns.ipynb
04.1.Patterns/tasks/animals/: animals_factory.py  test_public.py
04.2.Serrialization/lecture/: Serialization.ipynb
04.2.Serrialization/tasks/pickle_version/: pickle_version.py  test_public.py
04.2.Serrialization/tasks/py_dict_to_parquet/: py_dict_to_parquet.py  test_public.py
04.2.Serrialization/tasks/typed_json_decoder/: test_public.py  typed_json_decoder.py
05.1.DatabaseConnectivity/lecture/: db_lecture.ipynb
05.1.DatabaseConnectivity/tasks/simple_selects/: .task.yml  README.md  pyproject.toml  setup.py  simple_selects.py  test_public.py
05.1.DatabaseConnectivity_hard/tasks/splitvise_mini/: conftest.py  test_public.py
06.1.RestApi/lecture/: RestApi.ipynb
06.1.RestApi/lecture/demo_1_initial/: main.py
06.1.RestApi/lecture/demo_2_post_item/: main.py
06.1.RestApi/lecture/demo_3_error_handler/: main.py
06.1.RestApi/lecture/demo_6_router/: main.py
06.1.RestApi/lecture/demo_7_query/: main.py  (+1 more)
07.1.HW2/tasks/api_agent/: .task.yml  README.md  pyproject.toml
api_agent/: .gitignore  generate_swagger.py  test_public.py
api_agent/api_agent/: app.py
arg_binding/: arg_binding.py  test_public.py
byteme/: byteme.py  test_public.py
codeops/: codeops.py  test_public.py
tools/plugins/: run_pytest.py  run_pytest_module.py  run_pytest_module_wheel.py
vm/: README.md  cases.py  conftest.py  function_type_ban.py  test_stat.py  vm.py  vm_scorer.py
(+19 files in other folders)
