[project]
name = "python-course"
version = "0.0.0"
requires-python = "==3.13.7"
dependencies = [
    # internet
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "aiohttp==3.10.5",
    "yarl==1.11.1",

    # c bindings and compillers
    "numba==0.61.2",
    "Cython==3.1.3",
    "pybind11==3.0.1",

    # data
    "scipy==1.14.1",
    "numpy==2.2.6",
    "pandas==2.3.2",

    # visualisation
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "plotly==5.24.0",

    # date and time
    "tzlocal==5.2",

    # serializers
    "lxml==5.3.0",
    "flatbuffers==24.3.25",
    "protobuf==5.28.0",
    "PyYAML==6.0.2",
    "pyarrow==20.0.0",

    # other stuff
    "fastapi==0.114.0",
    "httpx==0.27.2",
    "SQLAlchemy==2.0.34",
    "GitPython==3.1.43",

    # testing and linting
    "ruff==0.6.4",
    "pyrefly==0.30.0",
    "black==24.8.0",
    "pytest==8.3.2",
    "pytest-timeout==2.3.1",
    "requests-mock==1.12.1",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "psutil==6.0.0",

    # types
    "types-requests==2.32.0.20240907",
]

[tool.pytest.ini_options]
timeout = 60
minversion = "6.0"
python_files = "test_*.py"
addopts = "-p no:requests_mock"
testpaths = [
    "tests",
    ".tmp"
]

## mypy/pyright configs removed; Pyre is used via pyrefly.toml

[tool.ruff]
target-version = "py313"

# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = ["E", "F", "W"]
lint.ignore = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",

    "tests",
    ".tmp"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

line-length = 120

[project.optional-dependencies]
lecture = [
    "notebook>=7.2.2",  # Jupyter Notebook
]
